# components/access-management/api/swagger.yaml
@@ -1,3 +1,4 @@
+---
 swagger: "2.0"
 info:
   description: "Access Management API."
@@ -11,23 +12,24 @@ info:
     url: "http://www.apache.org/licenses/LICENSE-2.0.html"
 basePath: "/kfam"
 schemes:
-  - "http"
+- "http"
 paths:
   /v1/profiles:
     post:
       summary: "Create a instance, which own a namespace of same name"
       operationId: "create profile"
       consumes:
-        - "application/json"
+      - "application/json"
       produces:
-        - "application/json"
+      - "application/json"
       parameters:
-        - in: "body"
-          name: "body"
-          description: "Profile spec"
-          required: true
-          schema:
-            $ref: "#/definitions/Profile"
+      - in: "body"
+        name: "body"
+        description: "Profile spec"
+        required: true
+        schema:
+          $ref: "#/definitions/Profile"
+        x-exportParamName: "Body"
       responses:
         200:
           description: "OK"
@@ -43,11 +45,12 @@ paths:
       description: "Only admin or profile owner can delete profile"
       operationId: "delete profile"
       parameters:
-        - in: "path"
-          name: "profile"
-          description: "Profile name"
-          required: true
-          type: "string"
+      - name: "profile"
+        in: "path"
+        description: "Profile name"
+        required: true
+        type: "string"
+        x-exportParamName: "Profile"
       responses:
         200:
           description: "OK"
@@ -58,21 +61,71 @@ paths:
         500:
           description: "Internal Server Error"
   /v1/bindings:
+    get:
+      summary: "Get bindings created via kubeflow; filtered by query param"
+      description: "bindings will contain it's current status"
+      operationId: "read binding"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Binding spec"
+        required: true
+        schema:
+          $ref: "#/definitions/Binding"
+        x-exportParamName: "Body"
+      - name: "user"
+        in: "query"
+        description: "User name, when not empty, only return bindings of this user"
+        required: false
+        type: "string"
+        x-exportParamName: "User"
+        x-optionalDataType: "String"
+      - name: "namespace"
+        in: "query"
+        description: "Namespace name, when not empty, only return bindings of this\
+          \ namespace"
+        required: false
+        type: "string"
+        x-exportParamName: "Namespace"
+        x-optionalDataType: "String"
+      - name: "role"
+        in: "query"
+        description: "owner or editor or viewer, when not empty, only return bindings\
+          \ of this role"
+        required: false
+        type: "string"
+        x-exportParamName: "Role"
+        x-optionalDataType: "String"
+      responses:
+        200:
+          description: "OK"
+          schema:
+            $ref: "#/definitions/Binding"
+        404:
+          description: "Entry not found"
+        500:
+          description: "Internal Server Error"
     post:
-      summary: "Create a binding specifying a user and an namespace, the binding will grant user edit-access to referred namespace"
+      summary: "Create a binding specifying a user and an namespace, the binding will\
+        \ grant user edit-access to referred namespace"
       description: "Only admin or referred namespace owner can create binding"
       operationId: "create binding"
       consumes:
-        - "application/json"
+      - "application/json"
       produces:
-        - "application/json"
+      - "application/json"
       parameters:
-        - in: "body"
-          name: "body"
-          description: "Binding spec"
-          required: true
-          schema:
-            $ref: "#/definitions/Binding"
+      - in: "body"
+        name: "body"
+        description: "Binding spec"
+        required: true
+        schema:
+          $ref: "#/definitions/Binding"
+        x-exportParamName: "Body"
       responses:
         200:
           description: "OK"
@@ -84,57 +137,22 @@ paths:
             $ref: "#/definitions/ErrorMessage"
         500:
           description: "Internal Server Error"
-    get:
-      summary: "Get bindings created via kubeflow; filtered by query param"
-      description: "bindings will contain it's current status"
-      operationId: "read binding"
-      consumes:
-        - "application/json"
-      produces:
-        - "application/json"
-      parameters:
-        - in: "body"
-          name: "body"
-          description: "Binding spec"
-          required: true
-          schema:
-            $ref: "#/definitions/Binding"
-        - in: "query"
-          name: "user"
-          description: "User name, when not empty, only return bindings of this user"
-          type: "string"
-        - in: "query"
-          name: "namespace"
-          description: "Namespace name, when not empty, only return bindings of this namespace"
-          type: "string"
-        - in: "query"
-          name: "role"
-          description: "owner or editor or viewer, when not empty, only return bindings of this role"
-          type: "string"
-      responses:
-        200:
-          description: "OK"
-          schema:
-            $ref: "#/definitions/Binding"
-        404:
-          description: "Entry not found"
-        500:
-          description: "Internal Server Error"
     delete:
       summary: "Delete binding specified in request body"
       description: "Only admin or referred namespace owner can delete binding"
       operationId: "delete binding"
       consumes:
-        - "application/json"
+      - "application/json"
       produces:
-        - "application/json"
+      - "application/json"
       parameters:
-        - in: "body"
-          name: "body"
-          description: "Binding spec"
-          required: true
-          schema:
-            $ref: "#/definitions/Binding"
+      - in: "body"
+        name: "body"
+        description: "Binding spec"
+        required: true
+        schema:
+          $ref: "#/definitions/Binding"
+        x-exportParamName: "Body"
       responses:
         200:
           description: "OK"
@@ -154,7 +172,6 @@ definitions:
           $ref: "#/definitions/Binding"
   Subject:
     type: "object"
-    description: "in consistent with io.k8s.api.rbac.v1.Subject"
     properties:
       kind:
         type: "string"
@@ -162,9 +179,13 @@ definitions:
         type: "string"
       namespace:
         type: "string"
+    description: "in consistent with io.k8s.api.rbac.v1.Subject"
+    example:
+      kind: "kind"
+      name: "name"
+      namespace: "namespace"
   RoleRef:
     type: "object"
-    description: "in consistent with io.k8s.api.rbac.v1.RoleRef"
     properties:
       apiGroup:
         type: "string"
@@ -172,9 +193,13 @@ definitions:
         type: "string"
       name:
         type: "string"
+    description: "in consistent with io.k8s.api.rbac.v1.RoleRef"
+    example:
+      apiGroup: "apiGroup"
+      kind: "kind"
+      name: "name"
   Binding:
     type: "object"
-    description: "Binding will give user edit access to referredNamespace"
     properties:
       user:
         $ref: "#/definitions/Subject"
@@ -183,8 +208,20 @@ definitions:
       RoleRef:
         $ref: "#/definitions/RoleRef"
       status:
-        description: "Status of the profile, one of Succeeded, Failed, Unknown."
         type: "string"
+        description: "Status of the profile, one of Succeeded, Failed, Unknown."
+    description: "Binding will give user edit access to referredNamespace"
+    example:
+      RoleRef:
+        apiGroup: "apiGroup"
+        kind: "kind"
+        name: "name"
+      referredNamespace: "referredNamespace"
+      user:
+        kind: "kind"
+        name: "name"
+        namespace: "namespace"
+      status: "status"
   Metadata:
     type: "object"
     properties:
@@ -192,28 +229,53 @@ definitions:
         type: "string"
       namespace:
         type: "string"
+    example:
+      name: "name"
+      namespace: "namespace"
   Profile:
     type: "object"
     properties:
       metadata:
         $ref: "#/definitions/Metadata"
       spec:
-        type: "object"
-        properties:
-          owner:
-            description: "Only accept kind: user"
-            $ref: "#/definitions/Subject"
+        $ref: "#/definitions/Profile_spec"
       status:
-        type: "object"
-        properties:
-          status:
-            description: "Status of the profile, one of Succeeded, Failed, Unknown."
-            type: "string"
-          message:
-            description: "Non empty when at Failed status, containing detailed error messages"
-            type: "string"
+        $ref: "#/definitions/Profile_status"
+    example:
+      metadata:
+        name: "name"
+        namespace: "namespace"
+      spec:
+        owner:
+          kind: "kind"
+          name: "name"
+          namespace: "namespace"
+      status:
+        message: "message"
+        status: "status"
   ErrorMessage:
     type: "object"
     properties:
       errorMessage:
         type: "string"
+  Profile_spec:
+    properties:
+      owner:
+        description: "Only accept kind: user"
+        $ref: "#/definitions/Subject"
+    example:
+      owner:
+        kind: "kind"
+        name: "name"
+        namespace: "namespace"
+  Profile_status:
+    properties:
+      status:
+        type: "string"
+        description: "Status of the profile, one of Succeeded, Failed, Unknown."
+      message:
+        type: "string"
+        description: "Non empty when at Failed status, containing detailed error messages"
+    example:
+      message: "message"
+      status: "status"
