# components/access-management/kfam/model_binding.go
@@ -1,0 +1,24 @@
+/*
+ * Kubeflow Auth
+ *
+ * Access Management API.
+ *
+ * API version: 1.0.0
+ * Contact: kubeflow-engineering@google.com
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package kfam
+
+// Binding will give user edit access to referredNamespace
+type Binding struct {
+
+	User *Subject `json:"user,omitempty"`
+
+	ReferredNamespace string `json:"referredNamespace,omitempty"`
+
+	RoleRef *RoleRef `json:"RoleRef,omitempty"`
+
+	// Status of the profile, one of Succeeded, Failed, Unknown.
+	Status string `json:"status,omitempty"`
+}
