# components/access-management/kfam/model_metadata.go
@@ -1,0 +1,18 @@
+/*
+ * Kubeflow Auth
+ *
+ * Access Management API.
+ *
+ * API version: 1.0.0
+ * Contact: kubeflow-engineering@google.com
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package kfam
+
+type Metadata struct {
+
+	Name string `json:"name,omitempty"`
+
+	Namespace string `json:"namespace,omitempty"`
+}
