# components/access-management/kfam/model_profile.go
@@ -1,0 +1,20 @@
+/*
+ * Kubeflow Auth
+ *
+ * Access Management API.
+ *
+ * API version: 1.0.0
+ * Contact: kubeflow-engineering@google.com
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package kfam
+
+type Profile struct {
+
+	Metadata *Metadata `json:"metadata,omitempty"`
+
+	Spec *ProfileSpec `json:"spec,omitempty"`
+
+	Status *ProfileStatus `json:"status,omitempty"`
+}
