# components/access-management/kfam/model_profile_status.go
@@ -1,0 +1,20 @@
+/*
+ * Kubeflow Auth
+ *
+ * Access Management API.
+ *
+ * API version: 1.0.0
+ * Contact: kubeflow-engineering@google.com
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package kfam
+
+type ProfileStatus struct {
+
+	// Status of the profile, one of Succeeded, Failed, Unknown.
+	Status string `json:"status,omitempty"`
+
+	// Non empty when at Failed status, containing detailed error messages
+	Message string `json:"message,omitempty"`
+}
