# components/access-management/kfam/model_subject.go
@@ -1,0 +1,21 @@
+/*
+ * Kubeflow Auth
+ *
+ * Access Management API.
+ *
+ * API version: 1.0.0
+ * Contact: kubeflow-engineering@google.com
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package kfam
+
+// in consistent with io.k8s.api.rbac.v1.Subject
+type Subject struct {
+
+	Kind string `json:"kind,omitempty"`
+
+	Name string `json:"name,omitempty"`
+
+	Namespace string `json:"namespace,omitempty"`
+}
